# vcpkg_test

./: CMakeLists.txt  main.cpp  notes.txt  sdl2.hpp
